Update master to newest version (2.9.1) (#4)